--- a/sistemas.html
+++ b/sistemas.html
@@ -354,6 +354,273 @@
                 Em breve, conteúdos e exercícios práticos para você aplicar os conceitos de redes e sistemas operacionais no seu dia a dia!
             </p>
         </section>
+        <section>
+            <h2>Otimização de Redes de Computadores: Guia Completo</h2>
+            <h4>1. Por que Otimizar Redes de Computadores?</h4>
+            <ul>
+                <li>⚡ <b>Melhora desempenho:</b> Reduz latência e aumenta throughput.</li>
+                <li>🔋 <b>Reduz custos operacionais:</b> Melhor uso de banda e energia.</li>
+                <li>📈 <b>Aumenta disponibilidade:</b> Minimiza falhas e tempos de inatividade.</li>
+                <li>🛡 <b>Melhora segurança:</b> Reduz vulnerabilidades e ataques.</li>
+            </ul>
+            <hr>
+            <h4>2. Trilha de Aprendizado</h4>
+            <ol>
+                <li>
+                    <b>Nível Básico</b>
+                    <ul>
+                        <li><b>Topologia de Redes</b>: Escolha entre estrela, malha, anel ou híbrida. Balanceamento de carga básico.</li>
+                        <li><b>Otimização de Banda</b>: QoS para priorizar tráfego, limitação de banda (traffic shaping).</li>
+                        <li><b>Monitoramento Básico</b>: Ferramentas como Ping, Traceroute, Wireshark, SNMP para métricas simples.</li>
+                    </ul>
+                </li>
+                <li>
+                    <b>Nível Intermediário</b>
+                    <ul>
+                        <li><b>Roteamento Eficiente</b>: Protocolos OSPF, EIGRP, BGP. ECMP para balanceamento.</li>
+                        <li><b>Otimização de Protocolos</b>: TCP/IP tuning, migração para IPv6.</li>
+                        <li><b>Redes Definidas por Software (SDN)</b>: OpenFlow, VXLAN, VLANs.</li>
+                        <li><b>Segurança e Performance</b>: Firewalls DPI, balanceadores de carga (HAProxy, Nginx).</li>
+                    </ul>
+                </li>
+                <li>
+                    <b>Nível Avançado</b>
+                    <ul>
+                        <li><b>Redes de Baixa Latência</b>: RDMA, Leaf-Spine architecture.</li>
+                        <li><b>Otimização para Nuvem e CDN</b>: AWS Global Accelerator, cacheamento inteligente.</li>
+                        <li><b>Automação e IA em Redes</b>: Ansible/Python, Machine Learning para congestionamentos.</li>
+                        <li><b>Benchmarking e Testes</b>: Iperf3, TRex.</li>
+                    </ul>
+                </li>
+            </ol>
+            <hr>
+            <h4>3. Técnicas de Otimização</h4>
+            <h5>1. Redução de Latência</h5>
+            <table style="margin:16px auto; border-collapse:collapse; min-width:320px;">
+                <tr style="background:#e3f2fd;">
+                    <th style="border:1px solid #b3c6e7;padding:4px 10px;">Técnica</th>
+                    <th style="border:1px solid #b3c6e7;padding:4px 10px;">Ganho Esperado</th>
+                </tr>
+                <tr>
+                    <td>TCP Fast Open (TFO)</td>
+                    <td>Até 30% menos handshake</td>
+                </tr>
+                <tr style="background:#f7fafd;">
+                    <td>QUIC (HTTP/3)</td>
+                    <td>20-50% mais rápido que TCP em redes instáveis</td>
+                </tr>
+                <tr>
+                    <td>Edge Computing</td>
+                    <td>Redução de latência em 40-60%</td>
+                </tr>
+            </table>
+            <b>Exemplo (Ajuste TCP no Linux):</b>
+            <pre style="background:#f7fafd;padding:10px;border-radius:7px;">
+sysctl -w net.ipv4.tcp_window_scaling=1
+sysctl -w net.ipv4.tcp_sack=1
+sysctl -w net.core.rmem_max=16777216
+            </pre>
+            <h5>2. Balanceamento de Carga</h5>
+            <ul>
+                <li><b>Round Robin vs Least Connections</b></li>
+                <li><b>Persistência de Sessão</b> para aplicações críticas.</li>
+            </ul>
+            <b>Exemplo (HAProxy):</b>
+            <pre style="background:#f7fafd;padding:10px;border-radius:7px;">
+backend web_servers
+    balance leastconn
+    server s1 192.168.1.10:80 check
+    server s2 192.168.1.11:80 check
+            </pre>
+            <h5>3. Segurança sem Sacrificar Performance</h5>
+            <ul>
+                <li><b>TLS 1.3</b> (mais rápido que TLS 1.2).</li>
+                <li><b>ACLs otimizadas</b> para evitar sobrecarga de firewall.</li>
+            </ul>
+            <b>Exemplo (Nginx com TLS 1.3):</b>
+            <pre style="background:#f7fafd;padding:10px;border-radius:7px;">
+ssl_protocols TLSv1.3;
+ssl_prefer_server_ciphers on;
+            </pre>
+            <h5>4. Monitoramento Proativo</h5>
+            <ul>
+                <li><b>Grafana + Prometheus</b> para métricas em tempo real.</li>
+                <li><b>NetFlow/sFlow</b> para análise de tráfego.</li>
+            </ul>
+            <hr>
+            <h4>4. Ferramentas Essenciais</h4>
+            <ul>
+                <li>🛠 <b>Análise de Rede:</b> Wireshark, SolarWinds.</li>
+                <li>⚙ <b>Otimização Avançada:</b> Cisco DNA Center, Juniper Apstra.</li>
+                <li>📊 <b>Testes de Performance:</b> Iperf3, TRex.</li>
+            </ul>
+            <hr>
+            <h4>5. Onde Aprender Mais?</h4>
+            <h5>Cursos Recomendados</h5>
+            <ul>
+                <li>Cisco CCNA/CCNP (roteamento e switching)</li>
+                <li>"Computer Networking: A Top-Down Approach" (Kurose & Ross)</li>
+            </ul>
+            <h5>Documentação Oficial</h5>
+            <ul>
+                <li><a href="https://www.ietf.org/" target="_blank">RFCs da IETF</a></li>
+                <li><a href="https://aws.amazon.com/networking/" target="_blank">AWS Networking Guide</a></li>
+            </ul>
+            <h5>Comunidades</h5>
+            <ul>
+                <li><a href="https://www.reddit.com/r/networking/" target="_blank">r/networking (Reddit)</a></li>
+                <li>Network Computing (Fórum profissional)</li>
+            </ul>
+            <hr>
+            <h4>6. Conclusão</h4>
+            <p>
+                <b>Checklist de Otimização:</b>
+                <ol style="max-width:700px;margin:12px auto 0 auto;text-align:left;">
+                    <li>Reduza latência (HTTP/3, TCP tuning).</li>
+                    <li>Balanceie carga (HAProxy, ECMP).</li>
+                    <li>Monitore proativamente (Grafana, NetFlow).</li>
+                    <li>Automatize configurações (Ansible, Python).</li>
+                </ol>
+                🚀 <b>Dica Final:</b><br>
+                <i>"Redes otimizadas podem reduzir custos em até 40% e melhorar a experiência do usuário em aplicações críticas."</i>
+            </p>
+            <p>
+                <b>Próximo nível?</b> Explore <b>SD-WAN</b> e <b>Redes Neuralmente Inspiradas</b> para o futuro das comunicações!
+            </p>
+        </section>
+        <section>
+            <h2>Otimização de Sistemas Operacionais: Guia Completo</h2>
+            <h4>1. Por que Otimizar um Sistema Operacional?</h4>
+            <ul>
+                <li>⚡ <b>Melhora desempenho:</b> Sistemas mais rápidos e responsivos.</li>
+                <li>🔋 <b>Reduz consumo de recursos:</b> CPU, RAM e armazenamento.</li>
+                <li>📈 <b>Aumenta estabilidade:</b> Menos travamentos e falhas.</li>
+                <li>🛡 <b>Reforça segurança:</b> Minimiza vulnerabilidades e ataques.</li>
+            </ul>
+            <hr>
+            <h4>2. Trilha de Aprendizado</h4>
+            <ol>
+                <li>
+                    <b>Nível Básico</b>
+                    <ul>
+                        <li><b>Gerenciamento de Processos</b>: <code>top</code>, <code>htop</code>, <code>ps</code> (monitoramento), <code>nice</code> e <code>renice</code> (prioridade).</li>
+                        <li><b>Otimização de Memória</b>: Swap tuning (Linux), gerenciamento de cache (<code>RAMMap</code> no Windows).</li>
+                        <li><b>Armazenamento e Disco</b>: Desfragmentação (Windows), <code>fstrim</code> (SSDs no Linux), sistemas de arquivos eficientes (EXT4, NTFS, ZFS).</li>
+                    </ul>
+                </li>
+                <li>
+                    <b>Nível Intermediário</b>
+                    <ul>
+                        <li><b>Kernel Tuning</b>: Parâmetros do kernel Linux (<code>sysctl.conf</code>), escalonamento de processos (CFS, BFS).</li>
+                        <li><b>Serviços e Inicialização</b>: <code>systemd-analyze</code> (Linux), <code>msconfig</code> e <code>Services.msc</code> (Windows).</li>
+                        <li><b>Virtualização e Containers</b>: KVM, VMware, Docker (<code>cgroups</code> para limitação de recursos).</li>
+                        <li><b>Segurança e Performance</b>: SELinux/AppArmor (Linux), Windows Defender (exclusões para apps críticas).</li>
+                    </ul>
+                </li>
+                <li>
+                    <b>Nível Avançado</b>
+                    <ul>
+                        <li><b>Compilação Customizada do Kernel</b>: <code>make menuconfig</code> (Linux), driver optimization (Windows).</li>
+                        <li><b>Benchmarking e Profiling</b>: <code>perf</code> (Linux), Windows Performance Toolkit, <code>latencymon</code> (Windows).</li>
+                        <li><b>Sistemas de Arquivos Avançados</b>: Btrfs (compressão), ReFS (Windows Server).</li>
+                        <li><b>Automação e Scripting</b>: Bash/PowerShell, Ansible para configuração em massa.</li>
+                    </ul>
+                </li>
+            </ol>
+            <hr>
+            <h4>3. Técnicas de Otimização</h4>
+            <h5>1. Aceleração de Boot</h5>
+            <table style="margin:16px auto; border-collapse:collapse; min-width:320px;">
+                <tr style="background:#e3f2fd;">
+                    <th style="border:1px solid #b3c6e7;padding:4px 10px;">Técnica</th>
+                    <th style="border:1px solid #b3c6e7;padding:4px 10px;">Ganho Esperado</th>
+                </tr>
+                <tr>
+                    <td>Desativar serviços inúteis</td>
+                    <td>Até 30% mais rápido</td>
+                </tr>
+                <tr style="background:#f7fafd;">
+                    <td>UEFI + Fast Boot</td>
+                    <td>2-5s de redução</td>
+                </tr>
+                <tr>
+                    <td>Initramfs otimizado (Linux)</td>
+                    <td>Boot mais consistente</td>
+                </tr>
+            </table>
+            <b>Exemplo (Linux – <code>systemd-analyze blame</code>):</b>
+            <pre style="background:#f7fafd;padding:10px;border-radius:7px;">
+systemctl disable bluetooth.service
+systemctl mask NetworkManager-wait-online.service
+            </pre>
+            <h5>2. Gerenciamento de Memória</h5>
+            <ul>
+                <li><b>Linux:</b> Ajustar <code>swappiness</code> (evitar swap desnecessário).</li>
+                <li><b>Windows:</b> Usar <code>EmptyStandbyList</code> (limpar memória inativa).</li>
+            </ul>
+            <b>Exemplo (Linux – <code>swappiness</code>):</b>
+            <pre style="background:#f7fafd;padding:10px;border-radius:7px;">
+echo "vm.swappiness=10" >> /etc/sysctl.conf
+            </pre>
+            <h5>3. Otimização de Disco</h5>
+            <ul>
+                <li><b>SSDs:</b> Desativar journaling (em alguns casos).</li>
+                <li><b>HDDs:</b> Alinhamento de partições (<code>parted -a optimal</code>).</li>
+            </ul>
+            <b>Exemplo (Windows – desfragmentação agendada):</b>
+            <pre style="background:#f7fafd;padding:10px;border-radius:7px;">
+Optimize-Volume -DriveLetter C -Defrag -Verbose
+            </pre>
+            <h5>4. Rede e IO</h5>
+            <ul>
+                <li><b>Linux:</b> <code>ionice</code> (priorizar E/S de disco).</li>
+                <li><b>Windows:</b> TCP Chimney (offload de rede).</li>
+            </ul>
+            <b>Exemplo (Linux – prioridade de E/S):</b>
+            <pre style="background:#f7fafd;padding:10px;border-radius:7px;">
+ionice -c1 -n0 -p $(pidof mysqld)
+            </pre>
+            <hr>
+            <h4>4. Ferramentas Essenciais</h4>
+            <ul>
+                <li>🛠 <b>Linux:</b> <code>strace</code>, <code>vmstat</code></li>
+                <li>⚙ <b>Windows:</b> Process Explorer, Resource Monitor (<code>resmon</code>)</li>
+                <li>📊 <b>Cross-Platform:</b> Sysinternals Suite, Prometheus + Grafana</li>
+            </ul>
+            <hr>
+            <h4>5. Onde Aprender Mais?</h4>
+            <h5>Cursos Recomendados</h5>
+            <ul>
+                <li><b>Linux Performance Optimization</b> (Brendan Gregg)</li>
+                <li><b>Windows Internals</b> (Mark Russinovich)</li>
+            </ul>
+            <h5>Documentação Oficial</h5>
+            <ul>
+                <li><a href="https://www.kernel.org/" target="_blank">Kernel.org</a> (Linux)</li>
+                <li><a href="https://docs.microsoft.com/en-us/windows/" target="_blank">Microsoft Docs</a> (Windows)</li>
+            </ul>
+            <h5>Comunidades</h5>
+            <ul>
+                <li><a href="https://www.reddit.com/r/linuxadmin/" target="_blank">r/linuxadmin</a> (Reddit)</li>
+                <li><a href="https://community.spiceworks.com/" target="_blank">Spiceworks</a> (Windows Server)</li>
+            </ul>
+            <hr>
+            <h4>6. Conclusão</h4>
+            <p>
+                <b>Checklist de Otimização:</b>
+                <ol style="max-width:700px;margin:12px auto 0 auto;text-align:left;">
+                    <li>Desative serviços inúteis (<code>systemd-analyze blame</code>).</li>
+                    <li>Ajuste memória e swap (<code>vm.swappiness</code>).</li>
+                    <li>Otimize discos (TRIM, alinhamento).</li>
+                    <li>Monitore desempenho (<code>perf</code>, <code>WPT</code>).</li>
+                </ol>
+                🚀 <b>Dica Final:</b><br>
+                <i>"Um SO otimizado pode dobrar a eficiência de aplicações críticas."</i>
+            </p>
+            <p>
+                <b>Próximo nível?</b> Explore <b>Kernel Patches Customizados</b> (como Liquorix) e <b>RTOS</b> (Sistemas Operacionais de Tempo Real)!
+            </p>
+        </section>
     </main>
     <!-- Modal de Cadastro -->
     <div id="register-modal" class="modal-bg">
