--- a/progwebmob.html
+++ b/progwebmob.html
@@ -417,5 +417,20 @@
         &copy; 2025 Ponto de Partida Dev. Todos os direitos reservados.
     </footer>
     <script src="funcionalidadejs.js"></script>
+
+    
+        <!-- VLibras Plugin (Intérprete de Libras) --> 
+  <div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget("https://vlibras.gov.br/app");
+  </script>
+
+
 </body>
 </html>
