--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             font-family: 'Segoe UI', Arial, sans-serif;
             background: #f0f8ff;
             color: #222;
+            transition: opacity 0.4s;
+            font-size: 1.18em; /* Aumenta o tamanho da fonte do texto */
         }
         /* Barra de navegação fixa */
         .navbar {
@@ -116,31 +118,48 @@
         h2 {
             color: #1976d2;
             margin-bottom: 10px;
+            font-size: 2em;
         }
         .courses {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 30px;
+            display: block;
             margin: 30px 0;
+            text-align: center;
         }
         .courses a {
-            display: block;
-            transition: transform 0.2s;
+            display: inline-block;
+            margin: 16px 8px;
+            transition: transform 0.18s cubic-bezier(.4,2,.6,1), box-shadow 0.18s;
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+            will-change: transform;
         }
         .courses a:hover {
-            transform: scale(1.04);
-            box-shadow: 0 4px 16px rgba(33,150,243,0.15);
+          transform: scale(1.04);
+          box-shadow: 0 4px 16px rgba(33,150,243,0.15);
+        }
+        .courses a:active {
+          transform: scale(0.95);
+          box-shadow: 0 1px 4px rgba(33,150,243,0.10);
         }
         .courses img {
-            width: 320px;
-            height: 200px;
+            width: 100%;
+            max-width: 400px; /* reduce this value to bring columns closer */
+            height: auto;
             object-fit: cover;
             display: block;
         }
+        .courses-description {
+            font-size: 0.98em;
+            max-width: 520px;
+            margin: 18px auto 0 auto;
+            line-height: 1.5;
+            color: #333;
+        }
+        .img-flm { max-width: 350px; height: auto; }
+        .img-webmob { max-width: 300px; height: auto; }
+        .img-sistemas { max-width: 380px; height: auto; }
+        .img-linguagens { max-width: 320px; height: auto; }
         footer {
             background: #1976d2;
             color: #fff;
@@ -345,9 +364,16 @@
         .navbar-space {
             height: 48px;
         }
+        body.fade-out {
+            opacity: 0;
+        }
+        /* Se quiser aumentar ainda mais o texto dos parágrafos e seções principais: */
+        main, section, p, li {
+            font-size: 1.15em;
+        }
     </style>
 </head>
-<body>
+<body style="opacity:0;">
     <!-- Barra de navegação fixa -->
     <nav class="navbar">
         <a href="index.html" class="navbar-logo">
@@ -391,27 +417,27 @@
             <h2>Trilhas de Aprendizado</h2>
             <p>Explore as principais áreas de conhecimento para iniciar sua jornada como desenvolvedor.</p>
             <div class="courses">
-                <a href="FLM.html" title="Fundamentos Lógicos e Matemáticos">
-                    <img src="./assets/FLM.jpeg" alt="Fundamentos Lógicos e Matemáticos">
+                <a href="FLM.html" class="course-flm" title="Fundamentos Lógicos e Matemáticos">
+                    <img src="./assets/FLM.jpeg" alt="Fundamentos Lógicos e Matemáticos" class="img-flm">
                 </a>
-                <a href="progwebmob.html" title="Programação Web e Mobile">
-                    <img src="./assets/programação web e mobile.jpeg" alt="Programação Web e Mobile">
+                <a href="progwebmob.html" class="course-webmob" title="Programação Web e Mobile">
+                    <img src="./assets/programação web e mobile.jpeg" alt="Programação Web e Mobile" class="img-webmob">
                 </a>
-                <a href="sistemas.html" title="Infraestrutura e Sistemas">
-                    <img src="./assets/infraestrutura e sistema.jpeg" alt="Infraestrutura e Sistemas">
+                <a href="sistemas.html" class="course-sistemas" title="Infraestrutura e Sistemas">
+                    <img src="./assets/infraestrutura e sistema.jpeg" alt="Infraestrutura e Sistemas" class="img-sistemas">
                 </a>
-                <a href="lingprogramação.html" title="Linguagens de Programação">
-                    <img src="./assets/linguagens de programação.jpeg" alt="Linguagens de Programação">
+                <a href="lingprogramação.html" class="course-linguagens" title="Linguagens de Programação">
+                    <img src="./assets/linguagens de programação.jpeg" alt="Linguagens de Programação" class="img-linguagens">
                 </a>
             </div>
-            <p>
+            <p class="courses-description">
                 Além disso, oferecemos conteúdos atualizados, linguagem acessível e uma navegação intuitiva, para que o usuário não se sinta perdido e possa evoluir no seu próprio ritmo. Valorizamos a experiência do usuário e queremos que ele se sinta acolhido, motivado e, acima de tudo, capaz de aprender.<br>
                 No <b>Ponto de Partida Dev</b>, acreditamos que todo programador tem uma história — <strong>e toda história começa com um primeiro passo.</strong> Estamos aqui para ser esse passo.
             </p>
         </section>
         <section>
             <h2 style="text-align: center;">Sobre o Site</h2>
-            <p>
+            <p style="text-align: center;">
                 <strong>Ponto de Partida Dev</strong> é uma plataforma criada para ajudar iniciantes em programação a dar seus primeiros passos de forma simples e acolhedora. 
                 Surgiu da dificuldade comum de estudantes de TI e autodidatas em começar na área, 
                 oferecendo um ponto de partida seguro e descomplicado para quem deseja entrar no universo da programação
@@ -491,27 +517,51 @@
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <script>
         new window.VLibras.Widget("https://vlibras.gov.br/app");
-        // Garante que o DOM está carregado antes de adicionar os eventos
-        document.addEventListener('DOMContentLoaded', function () {
-            function iniciarAudiodescricao() {
-                let texto = "";
-                const header = document.querySelector("header");
-                if (header) texto += header.innerText + ". ";
-                const main = document.querySelector("main");
-                if (main) texto += main.innerText;
-                if (texto.trim() === "") return;
-                const synth = window.speechSynthesis;
-                const utterThis = new SpeechSynthesisUtterance(texto);
-                utterThis.lang = "pt-BR";
-                synth.speak(utterThis);
-            }
-            function pararAudiodescricao() {
-                window.speechSynthesis.cancel();
-            }
-            const btnAudio = document.getElementById('btn-audiodescricao');
-            const btnParar = document.getElementById('btn-parar-audiodescricao');
-            if (btnAudio) btnAudio.addEventListener('click', iniciarAudiodescricao);
-            if (btnParar) btnParar.addEventListener('click', pararAudiodescricao);
+        // Audiodescrição
+        function iniciarAudiodescricao() {
+            let texto = "";
+            const header = document.querySelector("header");
+            if (header) texto += header.innerText + ". ";
+            const main = document.querySelector("main");
+            if (main) texto += main.innerText;
+            if (texto.trim() === "") return;
+            const synth = window.speechSynthesis;
+            const utterThis = new SpeechSynthesisUtterance(texto);
+            utterThis.lang = "pt-BR";
+            synth.speak(utterThis);
+        }
+        function pararAudiodescricao() {
+            window.speechSynthesis.cancel();
+        }
+        document.getElementById('btn-audiodescricao').addEventListener('click', iniciarAudiodescricao);
+        document.getElementById('btn-parar-audiodescricao').addEventListener('click', pararAudiodescricao);
+
+        // Fade-in and fade-out for all links
+        document.querySelectorAll('a').forEach(link => {
+            link.addEventListener('click', function(e) {
+                if (
+                    e.button !== 0 ||
+                    e.metaKey || e.ctrlKey || e.shiftKey || e.altKey
+                ) return;
+                if (
+                    this.target === "_blank" ||
+                    this.href.startsWith("mailto:") ||
+                    this.href.startsWith("tel:")
+                ) return;
+                e.preventDefault();
+                setTimeout(() => {
+                    document.body.classList.add('fade-out');
+                    document.body.style.opacity = '';
+                    setTimeout(() => {
+                        window.location = this.href;
+                    }, 400);
+                }, 300);
+            });
+        });
+
+        // Fade in on page load
+        window.addEventListener('DOMContentLoaded', () => {
+            document.body.style.opacity = 1;
         });
     </script>
 </body>
